# Python_Developer

./: README.md
Microblog_service/: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
Microblog_service/app/: __init__.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
Microblog_service/app/api/: config.py  likes.py  media.py  tweets.py  users.py
Microblog_service/app/routes/: likes.py  media.py  root.py  tweets.py  users.py
Microblog_service/static/: index.html
Microblog_service/static/css/: chunk-0420bcc4.d6bc3184.css  chunk-10e0d5b4.130d80ef.css  chunk-6f77c742.8d9a3d9c.css  chunk-732a3e8c.6334cd6b.css  chunk-vendors.de691de6.css
Microblog_service/Материалы/: Итоговый проект «Python Advanced».md
My_Profile_App/: README.md  main.py
My_Profile_App/business/: business_info.py
My_Profile_App/personal/: personal_info.py
My_Profile_App/utils/: menu.py  validators.py
My_Profile_App/Материалы/: ТЗ финальной работы курса «Основы Python. Часть 1».md
Python_Practice/CRM_system/: README.md
Python_Practice/Chat_bot/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  habit_tracker_bot.py  pyproject.toml  settings.py
Python_Practice/Service/: README.md
Telegram_bot_project/: .env  README.md  requirements.txt  search_assistant_bot.py
Telegram_bot_project/db/: db_connection.py  models.py
Telegram_bot_project/handlers/: delete.py  history.py  search.py  start.py
Telegram_bot_project/services/: database.py  omdb_api.py
(+29 files in other folders)
