[tool.poetry]
name = "nurken"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.6"
psycopg2-binary = "2.9.10"
sqlalchemy = "2.0.36"
uvicorn = "0.34.0"
starlette = "0.41.3"
pydantic = "2.10.4"
greenlet = "3.1.1"
mako = "1.3.8"
typing-extensions = "4.12.2"
anyio = "4.7.0"
click = "8.1.8"
alembic = "1.14.0"
httpx = "^0.28.1"
pydantic-settings = "^2.7.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
